Technexion: change wifi driver for detect different of wifi module.

--- a/drivers/net/wireless/bcmdhd/Kconfig
+++ b/drivers/net/wireless/bcmdhd/Kconfig
@@ -8,12 +8,16 @@ config BCMDHD
 	  unsure.
 
 config BCMDHD_SDIO
-	bool "SDIO bus interface support"
+	tristate "SDIO bus interface support"
 	depends on BCMDHD && MMC
 
 config BCMDHD_PCIE
 	bool "PCIe bus interface support"
 	depends on BCMDHD && PCI && !BCMDHD_SDIO
+
+config BCM4339
+	tristate "BCM4339 support"
+	depends on BCMDHD
 
 config BCM4354
 	tristate "BCM4354 support"
