--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -194,6 +194,7 @@ config DRM_GEM_SHMEM_HELPER
 config DRM_VM
 	bool
 	depends on DRM && MMU
+	default y
 
 config DRM_SCHED
 	tristate
@@ -267,6 +268,13 @@ config DRM_VKMS
 
 config DRM_ATI_PCIGART
         bool
+
+config DRM_VIVANTE
+	tristate "Vivante GCCore"
+	depends on DRM
+	help
+	  Choose this option if you have a Vivante graphics card.
+	  If M is selected, the module will be called vivante.
 
 source "drivers/gpu/drm/exynos/Kconfig"
 
