--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -164,6 +164,7 @@ config SND_SOC_ALL_CODECS
 	select SND_SOC_RT5677 if I2C && SPI_MASTER
 	select SND_SOC_RT5682 if I2C
 	select SND_SOC_SGTL5000 if I2C
+	select SND_SOC_SPH0645
 	select SND_SOC_SI476X if MFD_SI476X_CORE
 	select SND_SOC_SIMPLE_AMPLIFIER
 	select SND_SOC_SIRF_AUDIO_CODEC
@@ -1034,6 +1035,10 @@ config SND_SOC_RT5682
 config SND_SOC_SGTL5000
 	tristate "Freescale SGTL5000 CODEC"
 	depends on I2C
+
+config SND_SOC_SPH0645
+       tristate "Freescale SPH0645 CODEC"
+       default y
 
 config SND_SOC_SI476X
 	tristate
