MA-15586 Too many shift-count-negative build warning in qcacld-2.0 driver build
Ignore the build warning shift-count-negative for qcacld-2.0
regdomain.h:151:9: note: expanded from macro 'CHAN_TURBO_G_BM'
BM(_a, _b, _c, _d, _e, _f, _g, _h, _i, _j, _k, _l),
regdomain_common.h:1636:3: warning: shift count is negative [-Wshift-count-negative]
regdomain.h:197:57: note: expanded from macro 'BM'
(((_fj > 63) && (_fj < 128)) ? (((u_int64_t) 1) << (_fj - 64)) : (u_int64_t) 0) | \

Change-Id: I357903475495080ca1e01899e932dc148a3870aa
Signed-off-by: guoyin.chen <guoyin.chen@nxp.com>

--- a/drivers/net/wireless/qcacld-2.0/Kbuild
+++ b/drivers/net/wireless/qcacld-2.0/Kbuild
@@ -1055,7 +1055,8 @@ CDEFINES :=	-DANI_LITTLE_BYTE_ENDIAN \
 		-DFEATURE_WLAN_CH144 \
 		-DHTC_CRP_DEBUG \
 		-DWLAN_VOWIFI_DEBUG \
-		-DATH_SUPPORT_DFS
+		-DATH_SUPPORT_DFS \
+		-Wno-shift-count-negative
 #-Werror is omitted
 #-Wno-misleading-indentation is omitted
 
