--- a/drivers/net/wireless/qcacld-2.0/Kbuild
+++ b/drivers/net/wireless/qcacld-2.0/Kbuild
@@ -11,6 +11,18 @@ ifeq ($(CONFIG_CLD_HL_SDIO_CORE), y)
 	CONFIG_ROME_IF = sdio
 endif
 
+	CONFIG_CLD_HL_SDIO_CORE := y
+	CONFIG_PER_VDEV_TX_DESC_POOL := 1
+	SAP_AUTH_OFFLOAD := 1
+	CONFIG_QCA_LL_TX_FLOW_CT := 1
+	CONFIG_WLAN_FEATURE_FILS := y
+	CONFIG_FEATURE_COEX_PTA_CONFIG_ENABLE := y
+	CONFIG_QCA_SUPPORT_TXRX_DRIVER_TCP_DEL_ACK := y
+	CONFIG_WLAN_WAPI_MODE_11AC_DISABLE := y
+	TARGET_BUILD_VARIANT := user
+	CONFIG_NON_QC_PLATFORM := y
+	CONFIG_HDD_WLAN_WAIT_TIME := 10000
+
 ifndef CONFIG_ROME_IF
 	CONFIG_ROME_IF = pci
 endif
