--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -161,7 +161,8 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MM) += fsl-imx8mm-evk.dtb \
 				 imx8mm-pico-pi.dtb \
 				 imx8mm-pico-pi-nfc.dtb \
 				 imx8mm-pico-wizard.dtb \
-				 imx8mm-pico-wizard-ili9881c.dtb
+				 imx8mm-pico-wizard-ili9881c.dtb \
+				 imx8mm-pico-wizard-g101uan02.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
