--- a/arch/arm64/configs/tn_imx8_defconfig
+++ b/arch/arm64/configs/tn_imx8_defconfig
@@ -709,7 +709,6 @@ CONFIG_USB_SERIAL_XR=y
 CONFIG_USB_TEST=m
 CONFIG_USB_EHSET_TEST_FIXTURE=m
 CONFIG_USB_HSIC_USB3503=y
-CONFIG_USB_CC_TUSB320=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_MXS_PHY=y
 CONFIG_USB_ULPI=y
@@ -737,6 +736,7 @@ CONFIG_USB_G_SERIAL=m
 CONFIG_TYPEC=y
 CONFIG_TYPEC_TCPM=y
 CONFIG_TYPEC_TCPCI=y
+CONFIG_TYPEC_HD3SS3220=y
 CONFIG_TYPEC_SWITCH_GPIO=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
