ARM64: dts: add __symbol__node '-@' for edm-g-wizard
Signed-off-by: Joe Zhang <joe.zhang@technexion.com>

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -35,5 +35,8 @@ subdir-y += zte
 DTC_FLAGS_imx8mm-edm-g-wb := -@
 DTC_FLAGS_imx8mn-edm-g-wb := -@
 DTC_FLAGS_imx8mp-edm-g-wb := -@
+DTC_FLAGS_imx8mm-edm-g-wizard := -@
+DTC_FLAGS_imx8mn-edm-g-wizard := -@
+DTC_FLAGS_imx8mp-edm-g-wizard := -@
 DTC_FLAGS_imx8mq-edm-wizard := -@
 DTC_FLAGS_imx8mq-pico-pi := -@
