--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -39,4 +39,7 @@ DTC_FLAGS_imx8mm-edm-g-wizard := -@
 DTC_FLAGS_imx8mn-edm-g-wizard := -@
 DTC_FLAGS_imx8mp-edm-g-wizard := -@
 DTC_FLAGS_imx8mq-edm-wizard := -@
+DTC_FLAGS_imx8mm-pico-pi := -@
 DTC_FLAGS_imx8mq-pico-pi := -@
+DTC_FLAGS_imx8mm-pico-wizard := -@
+DTC_FLAGS_imx8mq-pico-wizard := -@
