--- a/arch/arm64/boot/dts/freescale/overlays/Makefile
+++ b/arch/arm64/boot/dts/freescale/overlays/Makefile
@@ -42,6 +42,9 @@ dtbo-$(CONFIG_ARCH_MXC) += imx8mm-axon-wizard-voicehat.dtbo imx8mm-axon-wizard-m
 				imx8mm-axon-wizard-ili9881c.dtbo imx8mm-axon-wizard-g101uan02.dtbo \
 				imx8mm-axon-wizard-sn65dsi84-vl215192108.dtbo imx8mm-axon-wizard-sn65dsi84-vl15613676.dtbo \
 				imx8mm-axon-wizard-sn65dsi84-vl10112880.dtbo
+dtbo-$(CONFIG_ARCH_MXC) += imx8mp-axon-wizard-lvds-vl10112880.dtbo imx8mp-axon-wizard-lvds-vl15613676.dtbo \
+			   imx8mp-axon-wizard-lvds-vl215192108.dtbo
+dtbo-$(CONFIG_ARCH_MXC) += imx8mp-axon-wizard-ili9881c.dtbo imx8mp-axon-wizard-g101uan02.dtbo imx8mp-axon-wizard-g080uan01.dtbo imx8mp-axon-wizard-mipi2hdmi-adv7535.dtbo
 dtbo-$(CONFIG_ARCH_MXC) += imx8mn-edm-g-wb-sn65dsi84-vl10112880.dtbo imx8mn-edm-g-wb-sn65dsi84-vl15613676.dtbo imx8mn-edm-g-wb-sn65dsi84-vl215192108.dtbo \
 			   imx8mn-edm-g-wb-tevi-ov5640.dtbo
 dtbo-$(CONFIG_ARCH_MXC) += imx8mn-edm-g-wizard-sn65dsi84-vl10112880.dtbo imx8mn-edm-g-wizard-sn65dsi84-vl15613676.dtbo imx8mn-edm-g-wizard-sn65dsi84-vl215192108.dtbo \
