--- a/arch/arm64/configs/tn_imx8_defconfig
+++ b/arch/arm64/configs/tn_imx8_defconfig
@@ -810,7 +810,6 @@ CONFIG_CLK_IMX8MQ=y
 CONFIG_CLK_IMX8QXP=y
 CONFIG_ARCH_S32_CLK=y
 CONFIG_HWSPINLOCK=y
-CONFIG_MAILBOX=y
 CONFIG_ARM_MHU=y
 CONFIG_IMX_MBOX=y
 CONFIG_PLATFORM_MHU=y
@@ -818,6 +817,7 @@ CONFIG_ARM_SMMU=y
 CONFIG_ARM_SMMU_V3=y
 CONFIG_REMOTEPROC=y
 CONFIG_IMX_REMOTEPROC=y
+CONFIG_IMX_DSP_REMOTEPROC=y
 CONFIG_RPMSG_QCOM_GLINK_RPM=y
 CONFIG_SOC_BRCMSTB=y
 CONFIG_FSL_MC_DPIO=y
