--- a/arch/arm64/boot/dts/freescale/imx8mp-axon-wizard.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-axon-wizard.dts
@@ -153,40 +153,6 @@
 	};
 };
 
-&mipi_csi_0 {
-    #address-cells = <1>;
-    #size-cells = <0>;
-    status = "okay";
-
-    port@0 {
-        reg = <0>;
-        mipi_csi0_ep: endpoint {
-            remote-endpoint = <&ov5640_mipi_0_ep>;
-            data-lanes = <2>;
-            csis-hs-settle = <13>;
-            csis-clk-settle = <2>;
-            csis-wclk;
-        };
-    };
-};
-
-&mipi_csi_1 {
-    #address-cells = <1>;
-    #size-cells = <0>;
-    status = "okay";
-
-    port@1 {
-        reg = <1>;
-        mipi_csi1_ep: endpoint {
-            remote-endpoint = <&ov5640_mipi_1_ep>;
-            data-lanes = <2>;
-            csis-hs-settle = <13>;
-            csis-clk-settle = <2>;
-            csis-wclk;
-        };
-    };
-};
-
 &snvs_pwrkey {
 	linux,keycode = <KEY_SUSPEND>;
 	status = "okay";
@@ -211,38 +177,24 @@
 							"EXPOSURE_TRIG_IN2", "FLASH_OUT2", "INFO_TRIG_IN2", "CAM_SHUTTER2", "XVS2", "PWR2_TIME0", "PWR2_TIME1", "PWR2_TIME2";
 	};
 
-	ov5640_otp_0: eeprom@54 {
-		compatible = "atmel,24c64";
-		reg = <0x54>;
-		//read-only;
+	ov5640_0: ov5640_mipi@3c {
+		reg = <0x3c>;
+		status = "disabled";
 	};
 
-	ov5640_0: ov5640_mipi@3c {
-		compatible = "ovti,ov5640";
-		reg = <0x3c>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_csi0_rst>;
-		clocks = <&clk IMX8MP_CLK_IPP_DO_CLKO1>;
-		clock-names = "xclk";
-		assigned-clocks = <&clk IMX8MP_CLK_IPP_DO_CLKO1>;
-		assigned-clock-parents = <&clk IMX8MP_CLK_24M>;
-		assigned-clock-rates = <24000000>;
-		csi_id = <0>;
-		powerdown-gpios = <&pca9555_a21 2 GPIO_ACTIVE_HIGH>;
-		reset-gpios = <&gpio1 8 GPIO_ACTIVE_LOW>;
-		mclk = <24000000>;
-		mclk_source = <0>;
-		mipi_csi;
-		nvmem = <&ov5640_otp_0>;
-		nvmem-names = "calib-data";
-		status = "okay";
-		port {
-			ov5640_mipi_0_ep: endpoint {
-				remote-endpoint = <&mipi_csi0_ep>;
-				data-lanes = <1 2>;
-				clock-lanes = <0>;
-			};
-		};
+	tevi_ar0521_0: tevi_ar0521@3d {
+		reg = <0x3d>;
+		status = "disabled";
+	};
+
+	tevi_ar0144_0: tevi_ar0144@3d {
+		reg = <0x3d>;
+		status = "disabled";
+	};
+
+	tevi_ar0234_0: tevi_ar0234@3d {
+		reg = <0x3d>;
+		status = "disabled";
 	};
 };
 
@@ -332,40 +284,6 @@
 		status = "okay";
 	};
 
-	ov5640_otp_1: eeprom@54 {
-		compatible = "atmel,24c64";
-		reg = <0x54>;
-		//read-only;
-	};
-
-	ov5640_1: ov5640_mipi@3c {
-		compatible = "ovti,ov5640";
-		reg = <0x3c>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_csi1_rst>;
-		clocks = <&clk IMX8MP_CLK_IPP_DO_CLKO2>;
-		clock-names = "xclk";
-		assigned-clocks = <&clk IMX8MP_CLK_IPP_DO_CLKO2>;
-		assigned-clock-parents = <&clk IMX8MP_CLK_24M>;
-		assigned-clock-rates = <24000000>;
-		csi_id = <0>;
-		powerdown-gpios = <&pca9555_a21 10 GPIO_ACTIVE_HIGH>;
-		reset-gpios = <&gpio1 8 GPIO_ACTIVE_LOW>;
-		mclk = <24000000>;
-		mclk_source = <0>;
-		mipi_csi;
-		nvmem = <&ov5640_otp_1>;
-		nvmem-names = "calib-data";
-		status = "okay";
-		port {
-			ov5640_mipi_1_ep: endpoint {
-				remote-endpoint = <&mipi_csi1_ep>;
-				data-lanes = <1 2>;
-				clock-lanes = <0>;
-			};
-		};
-	};
-
 	/* Power monitor for 3.3V SOM output supply */
 	sensor_3v3:ina219_3v3@45 {
 		compatible = "ti,ina219";
@@ -385,6 +303,26 @@
 		compatible = "ti,ina219";
 		reg = <0x44>;
 		shunt-resistor = <200000>; /* .2 Ohm resistor = 200000 uOhms*/
+	};
+
+	ov5640_1: ov5640_mipi@3c {
+		reg = <0x3c>;
+		status = "disabled";
+	};
+
+	tevi_ar0521_1: tevi_ar0521@3d {
+		reg = <0x3d>;
+		status = "disabled";
+	};
+
+	tevi_ar0144_1: tevi_ar0144@3d {
+		reg = <0x3d>;
+		status = "disabled";
+	};
+
+	tevi_ar0234_1: tevi_ar0234@3d {
+		reg = <0x3d>;
+		status = "disabled";
 	};
 };
 
