--- a/arch/arm64/configs/tn_imx8_defconfig
+++ b/arch/arm64/configs/tn_imx8_defconfig
@@ -452,6 +452,7 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_TC358743=y
 CONFIG_VIDEO_OV5640=y
 CONFIG_VIDEO_OV5645TN=y
+CONFIG_VIDEO_OV7251=y
 CONFIG_SERDES_VIZIONLINK=y
 # CONFIG_CXD2880_SPI_DRV is not set
 # CONFIG_MEDIA_TUNER_SIMPLE is not set
