ARM64: dts: imx8mp-axon: fix ap1302 node initialized for wizard

--- a/arch/arm64/boot/dts/freescale/imx8mp-axon-wizard.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-axon-wizard.dts
@@ -182,17 +182,7 @@
 		status = "disabled";
 	};
 
-	tevi_ar0521_0: tevi_ar0521@3d {
-		reg = <0x3d>;
-		status = "disabled";
-	};
-
-	tevi_ar0144_0: tevi_ar0144@3d {
-		reg = <0x3d>;
-		status = "disabled";
-	};
-
-	tevi_ar0234_0: tevi_ar0234@3d {
+	tevi_ap1302_0: tevi_ap1302@3d {
 		reg = <0x3d>;
 		status = "disabled";
 	};
@@ -215,17 +205,7 @@
 				status = "disabled";
 			};
 
-			vizionlink_tevi_ar0144_0: vizionlink_tevi_ar0144@3d {
-				reg = <0x3d>;
-				status = "disabled";
-			};
-
-			vizionlink_tevi_ar0234_0: vizionlink_tevi_ar0234@3d {
-				reg = <0x3d>;
-				status = "disabled";
-			};
-
-			vizionlink_tevi_ar0521_0: vizionlink_tevi_ar0521@3d {
+			vizionlink_tevi_ap1302_0: vizionlink_tevi_ap1302@3d {
 				reg = <0x3d>;
 				status = "disabled";
 			};
@@ -345,17 +325,7 @@
 		status = "disabled";
 	};
 
-	tevi_ar0521_1: tevi_ar0521@3d {
-		reg = <0x3d>;
-		status = "disabled";
-	};
-
-	tevi_ar0144_1: tevi_ar0144@3d {
-		reg = <0x3d>;
-		status = "disabled";
-	};
-
-	tevi_ar0234_1: tevi_ar0234@3d {
+	tevi_ap1302_1: tevi_ap1302@3d {
 		reg = <0x3d>;
 		status = "disabled";
 	};
@@ -378,17 +348,7 @@
 				status = "disabled";
 			};
 
-			vizionlink_tevi_ar0144_1: vizionlink_tevi_ar0144@3d {
-				reg = <0x3d>;
-				status = "disabled";
-			};
-
-			vizionlink_tevi_ar0234_1: vizionlink_tevi_ar0234@3d {
-				reg = <0x3d>;
-				status = "disabled";
-			};
-
-			vizionlink_tevi_ar0521_1: vizionlink_tevi_ar0521@3d {
+			vizionlink_tevi_ap1302_1: vizionlink_tevi_ap1302@3d {
 				reg = <0x3d>;
 				status = "disabled";
 			};
